--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "raining-hamburgers",
   "version": "1.0.0",
   "type": "module",
+  "author": "Gabriel de Jesus (@igabrieldejesus)",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,10 +18,10 @@
     "three": "^0.159.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17",
     "@types/three": "^0.159.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
